syntax = "proto3";

option csharp_namespace = "PiecykPolHurt.DataImport";

package productUpdate;

// The greeting service definition.
service ProductUpdater {
  // Sends a greeting
  rpc UpdateProduct (ProductUpdateRequest) returns (ProductUpdateResponse);
}

// The request message containing the user's name.
message ProductUpdateRequest {
  repeated Product productUpdate= 1;
}

// The response message containing the greetings.
message ProductUpdateResponse {
  string message = 1;
}

message Product{
  string productType = 1;
  int32 quantity = 2;
  string sendPoint = 3;
  float price = 4;
  string date = 5;
}